@@ -70,6 +70,7 @@ ext {
     controlsfxVersion = "11.0.3"
     jmzTabmVersion = "1.0.6"
     jnaVersion = "5.6.0"
+    junitversion = "5.7.0"
 
     // UUID for upgrades of this package on Windows. Generated by https://www.uuidgenerator.net 
     win_uuid = "896e9c2d-6db8-4259-a1af-1b5f8112d1e1"
@@ -165,8 +166,8 @@ dependencies {
     implementation 'net.java.dev.jna:jna:$jnaVersion'
     implementation "com.alanmrace:jimzmlparser:1.0.5"
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitversion"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitversion"
 }
 
 /*
@@ -200,6 +201,7 @@ javafx {
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
+    options.compilerArgs += ['--enable-preview']
 }
 
 tasks.withType(Test) {
@@ -309,4 +311,13 @@ processResources {
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
+
+task copyTestResources(type: Copy) {
+    from "${projectDir}/src/test/resources"
+    into "${buildDir}/classes/test"
+}
+processTestResources.dependsOn copyTestResources
